[package]
name = "rust-pbr"
version = "0.1.0"
authors = ["BrassLion"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3.4"
itertools = "0.9.0"

image = "0.23.4"

winit = "0.22.1"
wgpu = "0.5.0"

shaderc = "0.6.2"

nalgebra = "0.21.0"

specs = "0.16.1"

gltf = "0.15.2"